[package]
name = "modeling"
version = "0.1.4"
authors = ["Inherd Group <group@inherd.org>", "Phodal Huang <h@phodal.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/inherd/modeling"
documentation = "https://github.com/inherd/modeling"
homepage = "https://github.com/inherd/modeling"
description = """
Modeling is a tools to analysis different languages by Ctags
"""
categories = ["text-processing", "command-line-interface", "development-tools"]
exclude = [
    ".github/*",
    ".gitattributes",
    ".adr.json",
]

[dependencies]
nix            = "0.19"
tempfile       = "3"
failure        = "0.1"

# serialize
serde          = "1"
serde_derive   = "1"
serde_json     = "1"

# command args to struct
structopt      = "0.3"
structopt-toml = "0.4"

lazy_static = "1.4.0"

regex = "1"

# gitignore
# docs: https://github.com/BurntSushi/ripgrep/tree/master/crates/ignore
ignore = "0.4"
