[package]
name = "modeling"
version = "0.4.0"
authors = ["Inherd Group <group@inherd.org>", "Phodal Huang <h@phodal.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/inherd/modeling"
documentation = "https://github.com/inherd/modeling"
homepage = "https://github.com/inherd/modeling"
description = """
Modeling is a tools to analysis different languages by Ctags
"""
categories = ["text-processing", "command-line-interface", "development-tools"]
exclude = [
    ".github/*",
    ".gitattributes",
    ".adr.json",
]

[dependencies]
nix            = "0.19"
tempfile       = "3"
failure        = "0.1"

# serialize
serde          = "1"
serde_derive   = "1"
serde_json     = "1"

lazy_static = "1.4.0"

regex = "1"

# gitignore
# docs: https://github.com/BurntSushi/ripgrep/tree/master/crates/ignore
ignore = "0.4"

clap = "3.0.0-beta.2"

# command args to struct
structopt      = "0.3"
structopt-toml = "0.4"

# https://crates.io/crates/grep-regex
grep-regex = "0.1.9"
grep-searcher = "0.1.8"

similar =  { version = "2.1.0", features = ["text", "inline", "bytes"] }
console = "0.15.0"

prettytable-rs = "^0.8"

[workspace]
members = [
    "sqling",
    "domaining"
]
